micro-1/micro-k8s-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-svc-1-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-svc-1-deploy
  template:
    metadata:
      labels:
        app: micro-svc-1-deploy
    spec:
      containers:
      - name: micro-svc-1-container
        image: 315073111691.dkr.ecr.us-east-2.amazonaws.com/micro-1:latest
        ports:
        - containerPort: 5000
