micro-1/micro-k8s-1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: frontend.test.com
    http:
      paths: 
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: micro-svc-1-service
            port:
              number: 5000
